--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: ruby
-rvm:
-  - 1.9.3
-  - 2.2.1
 script:
   - "rake validate spec test"
-env:
-  - PUPPET_VERSION="~> 2.7.0"
-  - PUPPET_VERSION="~> 3.7.0"
-  - PUPPET_VERSION="~> 4.2.0"
-matrix:
-  exclude:
-    - rvm: 1.9.3
-      env: PUPPET_VERSION="~> 4.2.0"
 gemfile: .gemfile
+matrix:
+  include:
+    - rvm: 1.9.3
+      env: PUPPET_VERSION="~> 2.7.0"
+    - rvm: 1.9.3
+      env: PUPPET_VERSION="~> 3.7.0"
+    - rvm: 2.2.1
+      env: PUPPET_VERSION="~> 4.2.0"
